test/tests/compiler/14_pointers/invalid_types/extra_credit/bitwise_compound_assign_with_pointer.plx
#  No bitwise operations on pointers, including bitwise compound assignment
#  with pointer as right-hand side
pub fn main(none) i32 {
    null: *i32 = 0
    x: i32 = 100
    x |= null
    return true
}
